--- a/apps/payments/Dockerfile
+++ b/apps/payments/Dockerfile
@@ -4,12 +4,14 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY yarn.lock ./
-
-# RUN npm i -g yarn
+COPY tsconfig.json tsconfig.json
 
 RUN yarn install
 
-COPY . .
+COPY apps/payments apps/payments
+COPY libs libs
+
+RUN cd apps/payments && yarn install
 
 RUN yarn run build
 
