--- a/apps/notifications/Dockerfile
+++ b/apps/notifications/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY yarn.lock ./
 COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 # RUN npm i -g yarn
 
@@ -16,7 +17,7 @@ COPY libs libs
 
 RUN cd apps/notifications && yarn install
 
-RUN yarn run build
+RUN yarn run build notifications
 
 FROM node:18-alpine AS production
 
