--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY yarn.lock ./
 COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN yarn install
 
@@ -15,7 +16,7 @@ RUN yarn run build
 
 FROM node:18-alpine AS production
 
-ARG NODE_ENV=production
+ARG NODE_ENV=production reservations
 ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /usr/src/app
