--- a/apps/notifications/Dockerfile
+++ b/apps/notifications/Dockerfile
@@ -1,25 +1,24 @@
-FROM node:18-alpine AS development
-
+FROM node:alpine As development
 
 WORKDIR /usr/src/app
 
 COPY package.json ./
-COPY yarn.lock ./
+COPY pnpm-lock.yaml ./
 COPY tsconfig.json tsconfig.json
 COPY nest-cli.json nest-cli.json
 
-# RUN npm i -g yarn
+RUN npm install -g pnpm
 
-RUN yarn install
+RUN pnpm install
 
 COPY apps/notifications apps/notifications
 COPY libs libs
 
-RUN cd apps/notifications && yarn install
+RUN cd apps/notifications && pnpm install 
 
-RUN yarn run build notifications
+RUN pnpm run build notifications
 
-FROM node:18-alpine AS production
+FROM node:alpine as production
 
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
@@ -27,12 +26,12 @@ ENV NODE_ENV=${NODE_ENV}
 WORKDIR /usr/src/app
 
 COPY package.json ./
-COPY yarn.lock ./
+COPY pnpm-lock.yaml ./
 
+RUN npm install -g pnpm
 
-# RUN npm i -g yarn
-RUN yarn install --production
+RUN pnpm install --prod
 
 COPY --from=development /usr/src/app/dist ./dist
 
-CMD [ "node", "dist/apps/notifications/main" ]
+CMD ["node", "dist/apps/notifications/main"]
