--- a/k8s/booking/templates/notifications/deployment.yaml
+++ b/k8s/booking/templates/notifications/deployment.yaml
@@ -15,5 +15,24 @@ spec:
         app: notifications
     spec:
       containers:
-      - image: asia-south1-docker.pkg.dev/booking-management-438812/notifications/production
-        name: notifications
+        - image: asia-south1-docker.pkg.dev/booking-management-438812/notifications/production
+          name: notifications
+          env:
+            - name: PORT
+              value: '3000'
+            - name: GOOGLE_OAUTH_CLIENT_ID
+              value: 1063186256244-ipht1ehvcqb9l17alj4b0e61co20e42s.apps.googleusercontent.com
+            - name: GOOGLE_OAUTH_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: google
+                  key: clientSecret
+            - name: GOOGLE_OAUTH_REFRESH_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: google
+                  key: refreshToken
+            - name: SMTP_USER
+              value: nallaajaykrishnareddy@gmail.com
+          ports:
+            - containerPort: 3000
