--- a/k8s/booking/templates/payments/deployment.yaml
+++ b/k8s/booking/templates/payments/deployment.yaml
@@ -17,3 +17,17 @@ spec:
       containers:
       - image: asia-south1-docker.pkg.dev/booking-management-438812/payments/production
         name: payments
+        env:
+         - name: PORT
+           value: '3001'
+         - name: NOTIFICATION_HOST
+           value: notifications
+         - name: NOTIFICATION_PORT
+           value: "3000"
+         - name: STRIPE_SECRET_KEY
+           valueFrom:
+            secretKeyRef:
+              name: stripe
+              key: apiKey
+        ports:
+        - containerPort: 3001
