--- a/k8s/booking/templates/reservations/deployment.yaml
+++ b/k8s/booking/templates/reservations/deployment.yaml
@@ -15,11 +15,23 @@ spec:
         app: reservations
     spec:
       containers:
-      - image: asia-south1-docker.pkg.dev/booking-management-438812/reservations/production
-        name: reservations
-        env:
-        - name: MONGODB_URI
-          valueFrom:
-            secretKeyRef:
-              name: mongodb
-              key: connectionString
+        - image: asia-south1-docker.pkg.dev/booking-management-438812/reservations/production
+          name: reservations
+          env:
+            - name: MONGODB_URI
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb
+                  key: connectionString
+            - name: PORT
+              value: '3004'
+            - name: AUTH_HOST
+              value: auth
+            - name: AUTH_PORT
+              value: '3002'
+            - name: PAYMENTS_HOST
+              value: payments
+            - name: PAYMENTS_PORT
+              value: '3001'
+          ports:
+            - containerPort: 3004
